--- a/src/components/signature/style.css
+++ b/src/components/signature/style.css
@@ -2,6 +2,7 @@
 	position: fixed;
 	bottom: 2rem;
 	left: 2rem;
+	z-index: -1;
 
 	* {
 		user-select: none;
