--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,7 @@ body {
 		height: 200dvh;
 		left: -50vw;
 		top: -50dvh;
-		z-index: -1;
+		z-index: -2;
 		background: url("./assets/doodles/dark.svg"),
 			linear-gradient(var(--pearl), var(--blueprint-100));
 		transform: rotate(-15deg);
