--- a/src/routes/exercise-list/exercises/mobile-navigation/style.css
+++ b/src/routes/exercise-list/exercises/mobile-navigation/style.css
@@ -128,7 +128,7 @@
 		}
 
 		&:hover {
-			background: var(--ink-800);
+			background: rgb(255, 255, 255, 0.1);
 
 			&::after {
 				opacity: 1;
